--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -1,7 +1,7 @@
 #nav-container {
   width:100%;
   height: 39px;
-  border-bottom: 1px solid #f2f1f0;
+  border-bottom: 1px solid #d1cfce;
   padding-bottom: 16px;
 }
 
@@ -65,9 +65,9 @@
   padding-left: 16px;
   padding-right: 16px;
   border: none;
-  border-bottom: 1px solid #f2f1f0;
-  border-left: 1px solid #f2f1f0;
-  border-right: 1px solid #f2f1f0;
+  border-bottom: 1px solid #d1cfce;
+  border-left: 1px solid #d1cfce;
+  border-right: 1px solid #d1cfce;
   height: 39px;
   width: 100%;
   background-color: white;
@@ -77,6 +77,10 @@
   color: #0072ba;
   cursor: pointer;
   background-color: rgba(242, 241, 240, 1);
+}
+
+.category-dropdown-cell:hover .floaters {
+  visibility: visible;
 }
 
 #account {
@@ -110,7 +114,7 @@
   background-color: white;
   height: 150px;
   width: 200px;
-  border: 1px solid #f2f1f0;
+  border: 1px solid #d1cfce;
   border-radius: 1px;
   display: flex;
   flex-direction: column;
@@ -120,4 +124,54 @@
   width: fit-content;
   height: fit-content;
   padding: 32px 0px;
+}
+
+.floaters {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  left: 256px;
+  top: -1px;
+  width: 370px;
+  height: fit-content;
+  visibility: hidden;
+  background-color: white;
+  color: black;
+  border: 1px solid #d1cfce;
+  box-shadow: 2px 2px 4px rgba(242, 241, 240, 0.5);
+}
+
+.vendor-conts {
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+}
+
+.vendor-div {
+  width: 100%;
+  text-align: start;
+  padding-left: 8px;
+  font-size: 16px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+.vendor-div:hover {
+  color: #0072ba;
+  cursor: pointer;
+  background-color: rgba(242, 241, 240, 0.5);
+}
+
+.left-hidden-cat {
+  text-align: start;
+  font-size: 2em;
+  font-weight: bold;
+  padding-left: 8px;
+  padding-bottom: 6px;
+}
+
+.left-hidden-cat:hover {
+  color: #0072ba;
+  cursor: pointer;
+  background-color: rgba(242, 241, 240, 0.5);
 }
